// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Comments component renders with amountComments 1`] = `
<div>
  <CommentsHeader
    amountComments={666}
  />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;

exports[`Renders Comments component renders without props 1`] = `
<div>
  <CommentsHeader />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;
